fix path on safari

--- a/style.css
+++ b/style.css
@@ -265,7 +265,8 @@ body {
     /* padding-right: 50px; */
     background-color: white;
     opacity: 1;
-    clip-path: polygon(100% 100%,100% 0,0 0,0 100%,6.25% 0,12.5% 100%,18.75% 0,25% 100%,31.25% 0,37.5% 100%,43.75% 0,50% 100%,56.25% 0,62.5% 100%,68.75% 0,75% 100%,81.25% 0,87.5% 100%,93.75% 0,100% 100%)
+    clip-path: polygon(100% 100%,100% 0,0 0,0 100%,6.25% 0,12.5% 100%,18.75% 0,25% 100%,31.25% 0,37.5% 100%,43.75% 0,50% 100%,56.25% 0,62.5% 100%,68.75% 0,75% 100%,81.25% 0,87.5% 100%,93.75% 0,100% 100%);
+    -webkit-clip-path:polygon(100% 100%,100% 0,0 0,0 100%,6.25% 0,12.5% 100%,18.75% 0,25% 100%,31.25% 0,37.5% 100%,43.75% 0,50% 100%,56.25% 0,62.5% 100%,68.75% 0,75% 100%,81.25% 0,87.5% 100%,93.75% 0,100% 100%)
 }
 
 
